update fix loi giao dien

--- a/templates/admin_report_missing_grade.html
+++ b/templates/admin_report_missing_grade.html
@@ -28,8 +28,7 @@
         <h3>Danh sách sinh viên CHƯA THI môn: {{ selected_mon_hoc.ten_mh }}</h3>
         
         
-        <table>
-            <thead>
+        <table class="data-table"> <thead>
                 <tr>
                     <th>STT</th>
                     <th>Mã SV</th>
