--- a/templates/admin_add_course.html
+++ b/templates/admin_add_course.html
@@ -15,6 +15,10 @@
             <input type="text" name="ten_mh" required>
         </p>
         <p>
+            <label>Học kỳ (Số nguyên, ví dụ: 1, 2, 3):</label>
+            <input type="number" name="hoc_ky" min="1" value="1" required>
+        </p>
+        <p>
             <label>Số tín chỉ:</label>
             <input type="number" name="so_tin_chi" min="1" required>
         </p>
