--- a/templates/admin_edit_course.html
+++ b/templates/admin_edit_course.html
@@ -16,6 +16,10 @@
             <input type="text" name="ten_mh" value="{{ course.ten_mh }}" required>
         </p>
         <p>
+            <label>Học kỳ (Số nguyên, ví dụ: 1, 2, 3):</label>
+            <input type="number" name="hoc_ky" value="{{ course.hoc_ky }}" min="1" required>
+        </p>
+        <p>
             <label>Số tín chỉ:</label>
             <input type="number" name="so_tin_chi" value="{{ course.so_tin_chi }}" min="1" required>
         </p>
